--- a/projeto/index.html
+++ b/projeto/index.html
@@ -13,7 +13,24 @@
 </head>
 <body>
     <header>
-
+        <div class="content-header">
+            <div class="name">
+                Dyênifer Frazão
+            </div>
+            <div class="navigation">
+                <div class="buttons">
+                    Sobre
+                </div>
+                <div class="buttons">
+                    Informação
+                </div>
+                <div class="button-contact">
+                    <div class="contact-me">
+                        Contact Me
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
     hello world !
 </body>
