base da primeira sessao
apresentaçao e links

--- a/projeto/index.html
+++ b/projeto/index.html
@@ -32,6 +32,35 @@
             </div>
         </div>
     </header>
-    hello world !
+    <section class="content-section">
+        <div class="sections">
+            <div class="first-section">
+                Olá !
+            </div>
+        </div>
+    </section>
+    <section class="about">
+        <div class="apresentation">
+            <img class="my-resume" src="/projeto/img/Frame 1.png" />
+        </div>
+        <div class="links-about">
+            <a href="www.linkedin.com/in/dyenifer-frazao">
+                <img src="/projeto/img/linkedin.png">
+            </a>
+            <a href="https://github.com/iShellyX">
+                <img src="/projeto/img/github.png">
+            </a>
+            <a href="https://wa.me/5554991158914">
+                <img src="/projeto/img/whatsapp.png">
+            </a>
+            <a href="https://www.instagram.com/ishellyy_/">
+                <img src="/projeto/img/instagram.png">
+            </a>
+            <a href="mailto:thaimint04@gmail.com">
+                <img src="/projeto/img/email.png">
+            </a>
+        </div>
+    </section>
+    
 </body>
 </html>
