--- a/projeto/index.html
+++ b/projeto/index.html
@@ -35,7 +35,9 @@
     <section class="content-section">
         <div class="sections">
             <div class="first-section">
-                Olá !
+                <h1 id="text">
+                    Olá !
+                </h1>
             </div>
         </div>
     </section>
@@ -44,23 +46,165 @@
             <img class="my-resume" src="/projeto/img/Frame 1.png" />
         </div>
         <div class="links-about">
-            <a href="www.linkedin.com/in/dyenifer-frazao">
-                <img src="/projeto/img/linkedin.png">
-            </a>
-            <a href="https://github.com/iShellyX">
-                <img src="/projeto/img/github.png">
-            </a>
-            <a href="https://wa.me/5554991158914">
-                <img src="/projeto/img/whatsapp.png">
-            </a>
-            <a href="https://www.instagram.com/ishellyy_/">
-                <img src="/projeto/img/instagram.png">
-            </a>
-            <a href="mailto:thaimint04@gmail.com">
-                <img src="/projeto/img/email.png">
-            </a>
+            <div>
+                <img src="/projeto/img/seta.png">
+                <a href="https://www.linkedin.com/in/dyenifer-frazao">
+                    <img src="/projeto/img/linkedin.png">
+                </a>
+            </div>
+            <div>
+                <img src="/projeto/img/seta.png">
+                <a href="https://github.com/iShellyX">
+                    <img src="/projeto/img/github.png">
+                </a>
+            </div>
+            <div>
+                <img src="/projeto/img/seta.png">
+                <a href="mailto:thaimint04@gmail.com">
+                    <img src="/projeto/img/email.png">
+                </a>
+            </div>
+            <div>
+                <img src="/projeto/img/seta.png">
+                <a href="https://wa.me/5554991158914">
+                    <img src="/projeto/img/whatsapp.png">
+                </a>
+            </div>
+            <div>
+                <img src="/projeto/img/seta.png">
+                <a href="https://www.instagram.com/ishellyy_/">
+                    <img src="/projeto/img/instagram.png">
+                </a>
+            </div>
         </div>
     </section>
-    
+    <section class="content-section">
+        <div class="sections">
+            <div class="first-section">
+                <h1>
+                    "Conhecimentos": [
+                </h1>
+            </div>
+        </div>
+    </section>
+    <section class="knowledge">
+        <div>
+            <div class="block">
+                <div class="text-blocks">
+                    “Linguagens”:{<br/>
+                        “HTML”,<br/>
+                        “CSS”,<br/>
+                        “Python”,<br/>
+                        “JavaScript”,<br/>
+                        “R”,<br/>
+                        “TypeScript”<br/>
+                    }
+                </div>
+            </div>
+            <div class="block">
+                <div class="text-blocks">
+                    “Bibliotecas”:{<br/>
+                        “Pandas”,<br/>
+                        “NumPy”,<br/>
+                        “PyGame”,<br/>
+                        “React”,<br/>
+                        “ReactNative”<br/>
+                    }
+                </div>
+            </div>
+            <div class="block">
+                <div class="text-blocks">
+                    “Tecnologias”:{<br/>
+                        “GitHub”,<br/>
+                        “AWS”,<br/>
+                        “Figma”<br/>
+                    }
+                </div>
+            </div>
+        </div>
+        <div>
+            <div class="block">
+                <div class="text-blocks">
+                    “SO”:{<br/>
+                        “Windows”,<br/>
+                        “Linux”: [“Ubuntu”,<br/>
+                        “Ubuntu server”,<br/>
+                        “Kali”]<br/>
+                    }
+                </div>
+            </div>
+            <div class="block">
+                <div class="text-blocks">
+                    “Frameworks”: {<br/>
+                        “React”,<br/>
+                        “Node.js”<br/>
+                    }
+                </div>
+            </div>
+            <div class="block">
+                <div class="text-blocks">
+                    “Mais alguns conhecimentos”:{<br/>
+                        “Redes”,<br/>
+                        “Hardware”,<br/>
+                        “Cloud”,<br/>
+                        “UX/UI”,<br/>
+                        “Marketing”,<br/>
+                        “Pacote Office”,<br/>
+                        “CorelDraw”<br/>
+                    }</br>
+                    ]
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="content-section">
+        <div class="sections">
+            <div class="first-section">
+                <h1>
+                    Habilidades
+                </h1>
+            </div>
+        </div>
+    </section>
+    <section class="abilities">
+        <div>
+            <div class="block">
+                <div class="text-blocks">
+                    <div>Idiomas</br></div>
+                    <span>Inglês- Proeficiente C1</span>
+                </div>
+            </div>
+            <div class="block">
+                <div class="text-blocks">
+                    <div>Metodologias Ágeis</br></div>
+                    <ul>Scrum</ul>
+                    <ul>Kanbam</ul>
+                </div>
+            </div>
+            <div class="block">
+                <div class="text-blocks">
+                    <div>Metodologias Ágeis</br></div>
+                    <ul>Scrum</ul>
+                    <ul>Kanbam</ul>
+                </div>
+            </div>
+            <div class="block">
+                <div class="text-blocks">
+                    <div>SoftSkills</br></div>
+                    <ul>Comunicação</ul>
+                    <ul>Empatia</ul>
+                    <ul>Organização</ul>
+                    <ul>Criatividade</ul>
+                    <ul>Ética</ul>
+                    <ul>Colaboração</ul>
+                    <ul>Proatividade</ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        
+    </footer>
+    <script src="/projeto/js/script.js" defer></script>
 </body>
 </html>
