--- a/projeto/index.html
+++ b/projeto/index.html
@@ -25,7 +25,7 @@
                     Informação
                 </div>
                 <div class="button-contact">
-                    <div class="contact-me">
+                    <div class="firstcontact-me">
                         Contact Me
                     </div>
                 </div>
@@ -183,13 +183,6 @@
             </div>
             <div class="block">
                 <div class="text-blocks">
-                    <div>Metodologias Ágeis</br></div>
-                    <ul>Scrum</ul>
-                    <ul>Kanbam</ul>
-                </div>
-            </div>
-            <div class="block">
-                <div class="text-blocks">
                     <div>SoftSkills</br></div>
                     <ul>Comunicação</ul>
                     <ul>Empatia</ul>
@@ -203,8 +196,48 @@
         </div>
     </section>
     <footer>
-        
+        <div class="contact-form">
+            <div class="headline">
+                <b class="contact-me">Contact me</b>
+            </div>
+            <form class="form">
+                <div class="input">
+                    <label for="first-name" class="primeiro-nome">Primeiro nome</label>
+                    <input type="text" id="first-name" name="first-name" class="field" placeholder="Seu nome">
+                </div>
+                <div class="input">
+                    <label for="last-name" class="primeiro-nome">Sobrenome</label>
+                    <input type="text" id="last-name" name="last-name" class="field" placeholder="Seu sobrenome">
+                </div>
+                <div class="input">
+                    <label for="email" class="primeiro-nome">Seu melhor email</label>
+                    <input type="email" id="email" name="email" class="field" placeholder="email@dominio.com">
+                </div>
+                <div class="input">
+                    <label for="message" class="primeiro-nome">Mensagem</label>
+                    <input id="message" name="message" class="field" placeholder="Deixe aqui sua mensagem"></input>
+                </div>
+                <button type="submit" class="button submit">Submit</button>
+            </form>
+            <div class="social-icons-container">
+                <a href="https://www.linkedin.com/in/dyenifer-frazao">
+                    <img class="social-icons" alt="linkedin icon" src="/projeto/img/linkedin.png">
+                </a>
+                <a href="https://github.com/iShellyX">
+                    <img class="social-icons" alt="github icon" src="/projeto/img/github.png">
+                </a>
+                <a href="mailto:thaimint04@gmail.com">
+                    <img class="social-icons" alt="email icon" src="/projeto/img/email.png">
+                </a>
+                <a href="https://wa.me/5554991158914">
+                    <img class="social-icons" alt="whatsapp icon" src="/projeto/img/whatsapp.png">
+                </a>
+                <a href="https://www.instagram.com/ishellyy_/">
+                    <img class="social-icons" alt="instagram icon" src="/projeto/img/instagram.png">
+                </a>
+            </div>
     </footer>
+    
     <script src="/projeto/js/script.js" defer></script>
 </body>
 </html>
