--- a/projeto/index.html
+++ b/projeto/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://unpkg.com/scrollreveal"></script>
     <link rel="stylesheet" type="text/css" href="/projeto/css/reset.css" />
-    <link rel="stylesheet" type="text/css" href="/projeto/css/style.css" />
-
-    
+    <link rel="stylesheet" type="text/css" href="/projeto/css/style.css" />    
     <title>
         Shelly
     </title>
@@ -238,6 +237,7 @@
             </div>
     </footer>
     
-    <script src="/projeto/js/script.js" defer></script>
+    <script src="/projeto/js/scroll_script.js" defer></script>
+    <script src="/projeto/js/written_script.js" defer></script>
 </body>
 </html>
