--- a/projeto/index.html
+++ b/projeto/index.html
@@ -199,10 +199,10 @@
             <div class="headline">
                 <b class="contact-me">Contact me</b>
             </div>
-            <form class="form">
+            <form class="form" action="https://formsubmit.co/thaimint04@gmail.com" method="POST">
                 <div class="input">
                     <label for="first-name" class="primeiro-nome">Primeiro nome</label>
-                    <input type="text" id="first-name" name="first-name" class="field" placeholder="Seu nome">
+                    <input type="text" id="first-name" name="first-name" class="field" placeholder="Seu nome" required>
                 </div>
                 <div class="input">
                     <label for="last-name" class="primeiro-nome">Sobrenome</label>
@@ -210,11 +210,11 @@
                 </div>
                 <div class="input">
                     <label for="email" class="primeiro-nome">Seu melhor email</label>
-                    <input type="email" id="email" name="email" class="field" placeholder="email@dominio.com">
+                    <input type="email" id="email" name="email" class="field" placeholder="email@dominio.com" required>
                 </div>
                 <div class="input">
                     <label for="message" class="primeiro-nome">Mensagem</label>
-                    <input id="message" name="message" class="field" placeholder="Deixe aqui sua mensagem"></input>
+                    <input id="message" name="message" class="field" placeholder="Deixe aqui sua mensagem" required></input>
                 </div>
                 <button type="submit" class="button submit">Submit</button>
             </form>
