caminho das pastas alterado

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/scrollreveal"></script>
-    <link rel="stylesheet" type="text/css" href="/projeto/css/reset.css" />
-    <link rel="stylesheet" type="text/css" href="/projeto/css/style.css" />    
+    <link rel="stylesheet" type="text/css" href="/css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="/css/style.css" />    
     <title>
         Shelly
     </title>
@@ -42,37 +42,37 @@
     </section>
     <section class="about">
         <div class="apresentation">
-            <img class="my-resume" src="/projeto/img/Frame 1.png" />
+            <img class="my-resume" src="/img/Frame 1.png" />
         </div>
         <div class="links-about">
             <div>
-                <img src="/projeto/img/seta.png">
+                <img src="/img/seta.png">
                 <a href="https://www.linkedin.com/in/dyenifer-frazao">
-                    <img src="/projeto/img/linkedin.png">
+                    <img src="/img/linkedin.png">
                 </a>
             </div>
             <div>
-                <img src="/projeto/img/seta.png">
+                <img src="/img/seta.png">
                 <a href="https://github.com/iShellyX">
-                    <img src="/projeto/img/github.png">
+                    <img src="/img/github.png">
                 </a>
             </div>
             <div>
-                <img src="/projeto/img/seta.png">
+                <img src="/img/seta.png">
                 <a href="mailto:thaimint04@gmail.com">
-                    <img src="/projeto/img/email.png">
+                    <img src="/img/email.png">
                 </a>
             </div>
             <div>
-                <img src="/projeto/img/seta.png">
+                <img src="/img/seta.png">
                 <a href="https://wa.me/5554991158914">
-                    <img src="/projeto/img/whatsapp.png">
+                    <img src="/img/whatsapp.png">
                 </a>
             </div>
             <div>
-                <img src="/projeto/img/seta.png">
+                <img src="/img/seta.png">
                 <a href="https://www.instagram.com/ishellyy_/">
-                    <img src="/projeto/img/instagram.png">
+                    <img src="/img/instagram.png">
                 </a>
             </div>
         </div>
@@ -220,24 +220,24 @@
             </form>
             <div class="social-icons-container">
                 <a href="https://www.linkedin.com/in/dyenifer-frazao">
-                    <img class="social-icons" alt="linkedin icon" src="/projeto/img/linkedin.png">
+                    <img class="social-icons" alt="linkedin icon" src="/img/linkedin.png">
                 </a>
                 <a href="https://github.com/iShellyX">
-                    <img class="social-icons" alt="github icon" src="/projeto/img/github.png">
+                    <img class="social-icons" alt="github icon" src="/img/github.png">
                 </a>
                 <a href="mailto:thaimint04@gmail.com">
-                    <img class="social-icons" alt="email icon" src="/projeto/img/email.png">
+                    <img class="social-icons" alt="email icon" src="/img/email.png">
                 </a>
                 <a href="https://wa.me/5554991158914">
-                    <img class="social-icons" alt="whatsapp icon" src="/projeto/img/whatsapp.png">
+                    <img class="social-icons" alt="whatsapp icon" src="/img/whatsapp.png">
                 </a>
                 <a href="https://www.instagram.com/ishellyy_/">
-                    <img class="social-icons" alt="instagram icon" src="/projeto/img/instagram.png">
+                    <img class="social-icons" alt="instagram icon" src="/img/instagram.png">
                 </a>
             </div>
     </footer>
     
-    <script src="/projeto/js/scroll_script.js" defer></script>
-    <script src="/projeto/js/written_script.js" defer></script>
+    <script src="/js/scroll_script.js" defer></script>
+    <script src="/js/written_script.js" defer></script>
 </body>
 </html>
