ajuste na responsividade
e nos botoes

--- a/index.html
+++ b/index.html
@@ -18,14 +18,20 @@
             </div>
             <div class="navigation">
                 <div class="buttons">
-                    Sobre
+                    <a href="#about">
+                        Sobre
+                    </a>
                 </div>
                 <div class="buttons">
-                    Informação
+                    <a href="#information">
+                        Informação
+                    </a>
                 </div>
                 <div class="button-contact">
                     <div class="firstcontact-me">
-                        Contact Me
+                        <a href="#contactme">
+                            Contact Me
+                        </a>
                     </div>
                 </div>
             </div>
@@ -40,7 +46,7 @@
             </div>
         </div>
     </section>
-    <section class="about">
+    <section id="about" class="about">
         <div class="apresentation">
             <img class="my-resume" src="/img/Frame 1.png" />
         </div>
@@ -80,7 +86,7 @@
     <section class="content-section">
         <div class="sections">
             <div class="first-section">
-                <h1>
+                <h1 id="information">
                     "Conhecimentos": [
                 </h1>
             </div>
@@ -194,7 +200,7 @@
             </div>
         </div>
     </section>
-    <footer>
+    <footer id="contactme">
         <div class="contact-form">
             <div class="headline">
                 <b class="contact-me">Contact me</b>
