--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/scrollreveal"></script>
-    <link rel="stylesheet" type="text/css" href="/css/reset.css" />
-    <link rel="stylesheet" type="text/css" href="/css/style.css" />    
+    <link rel="stylesheet" type="text/css" href="css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />    
     <title>
         Shelly
     </title>
@@ -243,7 +243,7 @@
             </div>
     </footer>
     
-    <script src="/js/scroll_script.js" defer></script>
-    <script src="/js/written_script.js" defer></script>
+    <script src="js/scroll_script.js" defer></script>
+    <script src="js/written_script.js" defer></script>
 </body>
 </html>
