--- a/index.html
+++ b/index.html
@@ -48,37 +48,37 @@
     </section>
     <section id="about" class="about">
         <div class="apresentation">
-            <img class="my-resume" src="/img/Frame 1.png" />
+            <img class="my-resume" src="img/Frame 1.png" />
         </div>
         <div class="links-about">
             <div>
-                <img src="/img/seta.png">
+                <img src="img/seta.png">
                 <a href="https://www.linkedin.com/in/dyenifer-frazao">
-                    <img src="/img/linkedin.png">
+                    <img src="img/linkedin.png">
                 </a>
             </div>
             <div>
-                <img src="/img/seta.png">
+                <img src="img/seta.png">
                 <a href="https://github.com/iShellyX">
-                    <img src="/img/github.png">
+                    <img src="img/github.png">
                 </a>
             </div>
             <div>
-                <img src="/img/seta.png">
+                <img src="img/seta.png">
                 <a href="mailto:thaimint04@gmail.com">
-                    <img src="/img/email.png">
+                    <img src="img/email.png">
                 </a>
             </div>
             <div>
-                <img src="/img/seta.png">
+                <img src="img/seta.png">
                 <a href="https://wa.me/5554991158914">
-                    <img src="/img/whatsapp.png">
+                    <img src="img/whatsapp.png">
                 </a>
             </div>
             <div>
-                <img src="/img/seta.png">
+                <img src="img/seta.png">
                 <a href="https://www.instagram.com/ishellyy_/">
-                    <img src="/img/instagram.png">
+                    <img src="img/instagram.png">
                 </a>
             </div>
         </div>
@@ -226,19 +226,19 @@
             </form>
             <div class="social-icons-container">
                 <a href="https://www.linkedin.com/in/dyenifer-frazao">
-                    <img class="social-icons" alt="linkedin icon" src="/img/linkedin.png">
+                    <img class="social-icons" alt="linkedin icon" src="img/linkedin.png">
                 </a>
                 <a href="https://github.com/iShellyX">
-                    <img class="social-icons" alt="github icon" src="/img/github.png">
+                    <img class="social-icons" alt="github icon" src="img/github.png">
                 </a>
                 <a href="mailto:thaimint04@gmail.com">
-                    <img class="social-icons" alt="email icon" src="/img/email.png">
+                    <img class="social-icons" alt="email icon" src="img/email.png">
                 </a>
                 <a href="https://wa.me/5554991158914">
-                    <img class="social-icons" alt="whatsapp icon" src="/img/whatsapp.png">
+                    <img class="social-icons" alt="whatsapp icon" src="img/whatsapp.png">
                 </a>
                 <a href="https://www.instagram.com/ishellyy_/">
-                    <img class="social-icons" alt="instagram icon" src="/img/instagram.png">
+                    <img class="social-icons" alt="instagram icon" src="img/instagram.png">
                 </a>
             </div>
     </footer>
