--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
             <div>
                 <img src="img/seta.png">
-                <a href="https://github.com/iShellyX">
+                <a href="https://github.com/DyeniferFrazao">
                     <img src="img/github.png">
                 </a>
             </div>
